fixed width of projects on mobile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -480,7 +480,7 @@ nav {
 
     .projects {
         grid-template-columns: 1fr;
-        width: 80%;
+        // width: 80%;
         min-width: 355px;
         // width: 90vw;
         // -webkit-box-shadow: 0px 0px 12px 10px rgba(0,0,0,0.5); 
